# hs-spored

./: scrape.hs  spored.cabal
src/: Main.hs  Scraper.hs  SiolScraper.hs
